fix(shs-6446): horizontal card images stretch in colorful raised cards

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/utilities/_raised-cards.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/utilities/_raised-cards.scss
@@ -76,7 +76,9 @@ $container-medium: hb-calculate-rems(768px);
         color-mix(in srgb, color('black', 'global') 12%, transparent);
 
       @supports (object-fit: cover) {
-        align-items: stretch;
+        .hb-card__wrapper {
+          align-items: stretch;
+        }
 
         &__graphics {
           margin: 0;
